--- a/briefing.html
+++ b/briefing.html
@@ -156,22 +156,22 @@
               <h4 class="briefing__form_head">Контактные данные</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
-                  <label class="briefing__label" for="briefing__username">Как к вам обращаться? *</label>
-                    <input class="briefing__input" type="text" minlength="4" maxlength="40" id="briefing__username" />
+                  <input class="briefing__input" type="text" minlength="4" maxlength="40" id="briefing__username" />
+                  <label class="briefing__label" for="briefing__username">Как к вам обращаться? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <label class="briefing__label" for="briefing__phone">Номер телефона *</label>
-                  <input class="briefing__input" type="number" minlength="5" maxlength="20" id="briefing__phone" />
+                  <input class="briefing__input" type="tel" minlength="5" maxlength="20" id="briefing__phone" />
+                  <label class="briefing__label" for="briefing__phone">Номер телефона <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <label class="briefing__label" for="briefing__email">Номер телефона *</label>
-                    <input class="briefing__input" type="email" minlength="7" maxlength="20" id="briefing__email" />
+                  <input class="briefing__input" type="email" minlength="7" maxlength="20" id="briefing__email" />
+                  <label class="briefing__label" for="briefing__email">E-mail <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
@@ -446,7 +446,7 @@
                   <small>Error message</small>
                 </div>
                 <div class="header__forms_form_control">
-                  <input class="header__forms_form_input" type="number" minlength="5" maxlength="20" placeholder="Номер для связи" id="phone" />
+                  <input class="header__forms_form_input" type="tel" minlength="5" maxlength="20" placeholder="Номер для связи" id="phone" />
                   <span class="header__forms_form_bar"></span>
                   <span class="header__forms_form_border"></span>
                   <small>Error message</small>
