--- a/briefing.html
+++ b/briefing.html
@@ -197,6 +197,7 @@
               </div>
               <div class="briefing__bottom">
                 <p class="briefing__necessarily"><span>*</span> поля, обязательные для заполнения</p>
+                <a href="#top" data-scroll-to>sadasdasdasdasd</a>
                 <div class="btn btn__input briefing__button">
                   <input type="submit" name="submit" value="Продолжить" class="button__text">
                   <span class="button__hover"></span>
@@ -829,11 +830,6 @@
       </div>
     </div>
   </div>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/briefing.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/scroll.js"></script>
-  <script src="js/scrollbar.js"></script>
   <script>
     window.onload = function () {
       document.body.classList.add('loaded_hiding');
@@ -847,6 +843,11 @@
       }, 300);
     };
   </script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/form.js"></script>
+  <script src="js/scroll.js"></script>
+  <script src="js/scrollbar.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/briefing.js"></script>
 </body>
 </html>
