--- a/briefing.html
+++ b/briefing.html
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="briefing__right"> 
-            <form id="briefing__form_one" class="briefing__form briefing__form_one active">
+            <form id="briefing__form_one" class="briefing__form briefing__form_one">
               <h4 class="briefing__form_head">Контактные данные</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
@@ -203,39 +203,39 @@
                 </div>
               </div>
             </form>
-            <form id="briefing__form_two" class="briefing__form briefing__form_two">
+            <form id="briefing__form_two" class="briefing__form briefing__form_two active">
               <h4 class="briefing__form_head">О продукте</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__basicterms" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__basicterms"></textarea>
                   <label class="briefing__label" for="briefing__basicterms">Опишите ваш проект в основных чертах <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__target" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__target"></textarea>
                   <label class="briefing__label" for="briefing__target">Какие главные цели должны решаться с помощью вашего сайта? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__know" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__know"></textarea>
                   <label class="briefing__label" for="briefing__know">Что важно знать пользователям сайта о вас и вашем продукте? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__audience" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__audience"></textarea>
                   <label class="briefing__label" for="briefing__audience">Какая главная целевая аудитория по вашему мнению? Примерный портрет пользователя <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__choice" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__choice"></textarea>
                   <label class="briefing__label" for="briefing__choice">Почему пользователи должны сделать выбор в вашу пользу, а не в пользу конкурентов? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
@@ -839,13 +839,14 @@
         document.body.classList.add('loaded');
         document.body.classList.remove('loaded_hiding');
         document.querySelector('.preloader').style.display = "none";
-      }, 300);
+      }, 500);
     };
   </script>
   <script src="js/swiper.min.js"></script>
   <script src="js/form.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/scrollbar.js"></script>
+  <script src="js/textarea.js"></script>
   <script src="js/main.js"></script>
   <script src="js/briefing.js"></script>
 </body>
