--- a/team.html
+++ b/team.html
@@ -741,10 +741,6 @@
       </div>
     </div>
   </div>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/scroll.js"></script>
-  <script src="js/scrollbar.js"></script>
   <script>
     window.onload = function () {
       document.body.classList.add('loaded_hiding');
@@ -755,9 +751,14 @@
         document.body.classList.add('loaded');
         document.body.classList.remove('loaded_hiding');
         document.querySelector('.preloader').style.display = "none";
-      }, 300);
+      }, 500);
     };
   </script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/form.js"></script>
+  <script src="js/scroll.js"></script>
+  <script src="js/scrollbar.js"></script>
+  <script src="js/textarea.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
