--- a/briefing.html
+++ b/briefing.html
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="briefing__right"> 
-            <form id="briefing__form_one" class="briefing__form briefing__form_one">
+            <form id="briefing__form_one" class="briefing__form briefing__form_one active">
               <h4 class="briefing__form_head">Контактные данные</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
@@ -203,7 +203,7 @@
                 </div>
               </div>
             </form>
-            <form id="briefing__form_two" class="briefing__form briefing__form_two active">
+            <form id="briefing__form_two" class="briefing__form briefing__form_two">
               <h4 class="briefing__form_head">О продукте</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
