--- a/briefing.html
+++ b/briefing.html
@@ -260,49 +260,49 @@
               <h4 class="briefing__form_head">Конкуренты и референсы</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__link" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__link"></textarea>
                   <label class="briefing__label" for="briefing__link">Ссылки на ваших основных конкурентов <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__topics" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__topics"></textarea>
                   <label class="briefing__label" for="briefing__topics">Примеры сайтов по схожей тематике с вашей, которые вам нравятся. Напишите, что нравится на этих сайтах <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__notopics" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__notopics"></textarea>
                   <label class="briefing__label" for="briefing__notopics">Примеры сайтов по схожей тематике с вашей, которые вам не нравятся. Напишите, что не нравится на этих сайтах <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__price" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__price"></textarea>
                   <label class="briefing__label" for="briefing__price">Насколько конкурентна цена на ваш продукт или услугу? И из чего формируется эта цена? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__impression" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__impression"></textarea>
                   <label class="briefing__label" for="briefing__impression">Что всегда производит на клиентов отталкивающее впечатление? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__important" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__important"></textarea>
                   <label class="briefing__label" for="briefing__important">Критерии, то что ВАЖНО. 5 вещей, на которые он будет смотреть при выборе подрядчика. Или открыв 5 сайтов ваших конкурентов? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__like" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__like"></textarea>
                   <label class="briefing__label" for="briefing__like">Что именно вашей целевой аудитории нравится в ваших конкурентах? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
@@ -327,42 +327,42 @@
               <h4 class="briefing__form_head">Аудитория</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__problems" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__problems"></textarea>
                   <label class="briefing__label" for="briefing__problems">1-3 ключевых боли? Проблемы, которые мешают человеку в повседневности, и которые вы можете частично или полностью решить вашим продуктом? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__triggers" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__triggers"></textarea>
                   <label class="briefing__label" for="briefing__triggers">Триггеры? Какая тема его неосознанно зацепит, хочет он того или нет? Обычно это что-то простое, мимо чего он не может пройти. <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__infoball" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__infoball"></textarea>
                   <label class="briefing__label" for="briefing__infoball">Инфоболь? Информационная боль - это вынужденный поиск информации пользователем в Интернете для решения своей проблемы. Что они гуглят? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__needs" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__needs"></textarea>
                   <label class="briefing__label" for="briefing__needs">Потребности? Зачем ему потребовалось покупать (опишите ситуацию)? Что он хочет получить в итоге, какой результат? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__barriers" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__barriers"></textarea>
                   <label class="briefing__label" for="briefing__barriers">Опишите минимум 30 барьеров, на которые вы можете как-то повлиять: от важных до самых пустяковых, почему ЦА сомневается в покупке? В том числе опишите этап после покупки - возможно он боится, что через год все сломается. Что может помешать купить вашу услугу? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__strive" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__strive"></textarea>
                   <label class="briefing__label" for="briefing__strive">К чему стремятся при выборе продукта/услуги? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
@@ -387,21 +387,21 @@
               <h4 class="briefing__form_head">Дополнительно</h4>
               <div class="briefing__controls">
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__design" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__design"></textarea>
                   <label class="briefing__label" for="briefing__design">Какое впечатление должен, на Ваш взгляд, создавать дизайн лендинга? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__associations" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__associations"></textarea>
                   <label class="briefing__label" for="briefing__associations">Какие ассоциации должен вызывать дизайн? (например нежный, легкий, воздушный) <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__segment" />
+                  <textarea class="briefing__input" type="text" minlength="4" maxlength="300" id="briefing__segment"></textarea>
                   <label class="briefing__label" for="briefing__segment">Основной сегмент целевой аудитории? на кого приходится 80% продаж? <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
