add examination briefing

--- a/briefing.html
+++ b/briefing.html
@@ -144,7 +144,7 @@
                 <span class="briefing__steps briefing__steps_end">Брифинг отправлен</span>
               </h4>
               <div class="briefing__steps_flex">
-                <button class="briefing__step briefing__step_one active unblock"><span></span></button>
+                <button class="briefing__step briefing__step_one active unlock"><span></span></button>
                 <button class="briefing__step briefing__step_two"><span></span></button>
                 <button class="briefing__step briefing__step_three"><span></span></button>
                 <button class="briefing__step briefing__step_four"><span></span></button>
