--- a/briefing.html
+++ b/briefing.html
@@ -180,20 +180,21 @@
               </div>
               <h4 class="briefing__check_head">Какой продукт вам нужен?</h4>
               <div class="briefing__checks briefing__checks_type">
-                <label class="btn briefing__check active"><span class="button__text">Лендинг</span><span class="button__hover"></span><input class="briefing__check_input" name="type" type="radio" checked></label>
-                <label class="btn briefing__check"><span class="button__text">Интернет-магазин</span><span class="button__hover"></span><input class="briefing__check_input" name="type" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">Корпоративный сайт</span><span class="button__hover"></span><input class="briefing__check_input" name="type" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">Веб-приложение</span><span class="button__hover"></span><input class="briefing__check_input" name="type" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">Корпоративный портал</span><span class="button__hover"></span><input class="briefing__check_input" name="type" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">Доска объявлений</span><span class="button__hover"></span><input class="briefing__check_input" name="type" type="radio"></label>
+                <label class="btn checkbox briefing__check active"><span class="button__text">Лендинг</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="type" type="radio" checked></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">Интернет-магазин</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="type" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">Корпоративный сайт</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="type" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">Веб-приложение</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="type" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">Корпоративный портал</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="type" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">Доска объявлений</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="type" type="radio"></label>
+                <label class="btn checkbox briefing__check disabled"><span class="button__text">Доска объявлений</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input disabled" name="type" type="radio"></label>
               </div>
               <h4 class="briefing__check_head">Бюджет</h4>
               <div class="briefing__checks briefing__checks_sum">
-                <label class="btn briefing__check active"><span class="button__text">200 - 500 тыс.</span><span class="button__hover"></span><input class="briefing__check_input" name="sum" type="radio" checked></label>
-                <label class="btn briefing__check"><span class="button__text">500 - 700 тыс.</span><span class="button__hover"></span><input class="briefing__check_input" name="sum" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">700 - 900 тыс.</span><span class="button__hover"></span><input class="briefing__check_input" name="sum" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">900 тыс. - 1 млн.</span><span class="button__hover"></span><input class="briefing__check_input" name="sum" type="radio"></label>
-                <label class="btn briefing__check"><span class="button__text">более 1 млн.</span><span class="button__hover"></span><input class="briefing__check_input" name="sum" type="radio"></label>
+                <label class="btn checkbox briefing__check active"><span class="button__text">200 - 500 тыс.</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="sum" type="radio" checked></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">500 - 700 тыс.</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="sum" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">700 - 900 тыс.</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="sum" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">900 тыс. - 1 млн.</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="sum" type="radio"></label>
+                <label class="btn checkbox briefing__check"><span class="button__text">более 1 млн.</span><span class="button__hover"></span><input class="checkbox__input briefing__check_input" name="sum" type="radio"></label>
               </div>
               <div class="briefing__bottom">
                 <p class="briefing__necessarily"><span>*</span> поля, обязательные для заполнения</p>
