--- a/briefing.html
+++ b/briefing.html
@@ -164,7 +164,7 @@
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" type="tel" minlength="5" maxlength="20" id="briefing__phone" />
+                  <input class="briefing__input" data-phone-pattern type="tel" minlength="17" maxlength="17" id="briefing__phone" />
                   <label class="briefing__label" for="briefing__phone">Номер телефона <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
