fix color and add border briefing

--- a/briefing.html
+++ b/briefing.html
@@ -144,7 +144,7 @@
                 <span class="briefing__steps briefing__steps_end">Брифинг отправлен</span>
               </h4>
               <div class="briefing__steps_flex">
-                <button class="briefing__step briefing__step_one active unlock"><span></span></button>
+                <button class="briefing__step briefing__step_one active unlock border"><span></span></button>
                 <button class="briefing__step briefing__step_two"><span></span></button>
                 <button class="briefing__step briefing__step_three"><span></span></button>
                 <button class="briefing__step briefing__step_four"><span></span></button>
@@ -164,7 +164,7 @@
                   <small>Error message</small>
                 </div>
                 <div class="briefing__control">
-                  <input class="briefing__input" data-phone-pattern type="tel" minlength="17" maxlength="17" id="briefing__phone" />
+                  <input class="briefing__input" data-phone-pattern type="tel" minlength="17" maxlength="20" id="briefing__phone" />
                   <label class="briefing__label" for="briefing__phone">Номер телефона <span>*</span></label>
                   <span class="briefing__bar"></span>
                   <span class="briefing__border"></span>
