--- a/briefing.html
+++ b/briefing.html
@@ -151,10 +151,10 @@
                 <button class="briefing__step briefing__step_five"><span></span></button>
               </div>
             </div>
-            <button class="btn briefing__home">
+            <a href="index.html" class="btn briefing__home">
               <span class="button__text">Перейти на главную</span>
               <span class="button__hover"></span>
-            </button>
+            </a>
           </div>
           <div class="briefing__right"> 
             <form id="briefing__form_one" class="briefing__form briefing__form_one active">
