--- a/services.html
+++ b/services.html
@@ -182,6 +182,7 @@
       </div>
     </section>
     <section class="services" data-scroll-section>
+      <div class="main__border"></div>
       <div class="services__block">
         <div class="container services__container">
           <div class="services__flex">
@@ -328,7 +329,7 @@
       <div class="main__border"></div>
       <div class="expertise__border"></div>
       <div class="container expertise__container">
-        <div class="expertise__block" data-scroll>
+        <div class="expertise__block">
           <div class="expertise__left">
             <button class="expertise__button">
               <h4 class="expertise__heading">FIX PRICE</h4>
