--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="main__border"></div>
       <div class="expertise__border"></div>
       <div class="container expertise__container">
-        <div class="expertise__block" data-scroll>
+        <div class="expertise__block">
           <div class="expertise__left">
             <button class="expertise__button">
               <h4 class="expertise__heading">Аналитика</h4>
