add link in header

--- a/services.html
+++ b/services.html
@@ -531,13 +531,18 @@
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="team.html" class="header__nav_link">
+                <a href="career.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Карьера</span></h3>
                 </a>
               </li>
               <li class="header__nav_item">
                 <a href="public.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Статьи</span></h3>
+                </a>
+              </li>
+              <li class="header__nav_item">
+                <a href="contacts.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Контакты</span></h3>
                 </a>
               </li>
             </ul>
