--- a/career.html
+++ b/career.html
@@ -163,8 +163,8 @@
               <h1 class="career_top__head">КАРЬЕРА</h1>
               <p class="career_top__desc">Мы - единомышленники, которые стремятся создавать уникальные и функциональные продукты на основе аналитики, данных из метрик и исследовании пользовательского опыта.</p>
             </div>
-            <a href="#" target="_blank" class="btn career_top__button">
-              <span class="button__text">Веб-сайт</span>
+            <a data-scroll-to href="#vacancy" class="btn career_top__button">
+              <span class="button__text">Перейти к вакансиям</span>
               <span class="button__hover"></span>
             </a>
           </div>
@@ -265,7 +265,7 @@
       </div>
       <div class="career__divider"></div>
     </section>
-    <section class="career_bottom" data-scroll-section>
+    <section class="career_bottom" data-scroll-section id="vacancy">
       <div class="career_bottom__block">
         <button class="expertise__button">
           <div class="container career_bottom__container">
