build career popup

--- a/career.html
+++ b/career.html
@@ -271,62 +271,6 @@
           <div class="container career_bottom__container">
             <div class="career_bottom__flex">
               <div class="career_bottom__head">
-                <h4 class="expertise__heading">Аналитика</h4>
-                <p class="career_bottom__desc">Ищем классного бизнес-аналитика, Чтобы работал заебись и вообще всё что надо делал и вопросов не было</p>
-              </div>
-              <div class="btn__arrow expertise__btn">
-                <div class="btn__side btn__side_hover">
-                  <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.928932 0.928993C0.65279 0.928993 0.428932 1.15285 0.428932 1.42899L0.428932 5.92899C0.428932 6.20514 0.65279 6.42899 0.928932 6.42899C1.20507 6.42899 1.42893 6.20514 1.42893 5.92899L1.42893 1.92899L5.42893 1.92899C5.70507 1.92899 5.92893 1.70514 5.92893 1.42899C5.92893 1.15285 5.70507 0.928993 5.42893 0.928993L0.928932 0.928993ZM8.35355 8.14651L1.28249 1.07544L0.575379 1.78255L7.64645 8.85361L8.35355 8.14651Z" fill="currentColor"></path>
-                  </svg>
-                </div>
-                <div class="btn__side btn__side_default">
-                  <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.928932 0.928993C0.65279 0.928993 0.428932 1.15285 0.428932 1.42899L0.428932 5.92899C0.428932 6.20514 0.65279 6.42899 0.928932 6.42899C1.20507 6.42899 1.42893 6.20514 1.42893 5.92899L1.42893 1.92899L5.42893 1.92899C5.70507 1.92899 5.92893 1.70514 5.92893 1.42899C5.92893 1.15285 5.70507 0.928993 5.42893 0.928993L0.928932 0.928993ZM8.35355 8.14651L1.28249 1.07544L0.575379 1.78255L7.64645 8.85361L8.35355 8.14651Z" fill="currentColor"></path>
-                  </svg>
-                </div>
-              </div>
-            </div>
-          </div>
-        </button>
-        <div class="expertise__panel">
-          <div class="container career_bottom__container">
-            <div class="career_bottom__list">
-              <ul>
-                <li><b>Локация:</b> Удаленная работа.</li>
-                <li><b>Опыт:</b> 5+ лет.</li>
-                <li><b>Hard skills:</b> Figma, UX patterns, UX analysis, CJM design, UI design.</li>
-                <li><b>Soft skills:</b> Добрый и внимательный.</li>
-              </ul>
-              <ul>
-                <li><b>Требования:</b></li>
-                <li>· Не сидел.</li>
-                <li>· Не наркоман.</li>
-                <li>· Не чёрный.</li>
-                <li>· Толерантный ко всему и вся.</li>
-                <li>· За вкусняшки.</li>
-              </ul>
-              <ul>
-                <li><b>Обязанности:</b></li>
-                <li>· Кушать.</li>
-                <li>· Классно работать.</li>
-                <li>· Очень классно работать.</li>
-              </ul>
-              <ul>
-                <li><b>Зарплата</b></li>
-                <li><strong>600 $/час</strong></li>
-                <button class="btn career_bottom__button">
-                  <span class="button__text">Откликнуться</span>
-                  <span class="button__hover"></span>
-                </button>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <button class="expertise__button">
-          <div class="container career_bottom__container">
-            <div class="career_bottom__flex">
-              <div class="career_bottom__head">
                 <h4 class="expertise__heading">Бизнес - аналитик</h4>
                 <p class="career_bottom__desc">Ищем классного бизнес-аналитика, чтобы работал заебись и вообще всё что надо делал и вопросов не было</p>
               </div>
@@ -483,12 +427,10 @@
               <ul>
                 <li><b>Зарплата</b></li>
                 <li><b>600 $/час</b></li>
-                <li>
-                  <a href="#" target="_blank" class="btn career_bottom__button">
-                    <span class="button__text">Откликнуться</span>
-                    <span class="button__hover"></span>
-                  </a>
-                </li>
+                <button class="btn career_bottom__button">
+                  <span class="button__text">Откликнуться</span>
+                  <span class="button__hover"></span>
+                </button>
               </ul>
             </div>
           </div>
@@ -798,6 +740,79 @@
                 <div class="header__forms_form_control">
                   <label for="text" class="header__form_name">Опишите проект</label>
                   <textarea class="header__forms_form_input header__forms_form_textarea" name="" id="text" placeholder=""></textarea>
+                  <span class="header__forms_form_bar"></span>
+                  <span class="header__forms_form_border"></span>
+                  <small>Error message</small>
+                </div>
+              </div>
+              <div class="header__form_bottom">
+                <div class="btn btn__input header__form_button">
+                  <input type="submit" name="submit" value="Отправить" class="button__text">
+                  <span class="button__hover"></span>
+                </div>
+                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="privacy.html" class="text"><span>политики конфиденциальности</span></a>.</p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="career_popup">
+    <div class="career_popup__scroll" data-scrollbar>
+      <div class="container career_popup__container">
+        <div class="career_popup__blocks">
+          <div class="career_popup__block">
+            <form id="career" class="header__forms_form">
+              <div class="header__forms_form_controls">
+                <div class="header__forms_form_control">
+                  <input class="header__forms_form_input" type="text" minlength="4" maxlength="40" placeholder="Как к вам обращаться?" id="careerusername" />
+                  <span class="header__forms_form_bar"></span>
+                  <span class="header__forms_form_border"></span>
+                  <small>Error message</small>
+                </div>
+                <div class="header__forms_form_control">
+                  <input class="header__forms_form_input" type="tel" minlength="5" maxlength="20" placeholder="Номер для связи" id="careerphone" />
+                  <span class="header__forms_form_bar"></span>
+                  <span class="header__forms_form_border"></span>
+                  <small>Error message</small>
+                </div>
+                <div class="header__select_box">
+                  <div class="header__select" data-select>
+                    <div class="header__select_selected_item" data-select-action data-select-open>
+                      <div class="header__select_selected-title" data-select-title>Способ связи</div>
+                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
+                      </svg>
+                    </div>
+                    <div class="header__select_list" data-select-list>
+                      <div class="header__select_list_item" data-select-action data-select-item>Позвонить</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Написать на почту</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Написать в телеграм</div>
+                    </div>
+                    <input class="header__select_input" type="text" data-select-input>
+                  </div>
+                </div>
+                <div class="header__select_box">
+                  <div class="header__select" data-select>
+                    <div class="header__select_selected_item" data-select-action data-select-open>
+                      <div class="header__select_selected-title" data-select-title>Бюджет проекта</div>
+                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
+                      </svg>
+                    </div>
+                    <div class="header__select_list" data-select-list>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 50 до 150</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 150 до 500</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 500 до 1 млн</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 1 млн</div>
+                    </div>
+                    <input class="header__select_input" type="text" data-select-input>
+                  </div>
+                </div>
+                <div class="header__forms_form_control">
+                  <label for="text" class="header__form_name">Опишите проект</label>
+                  <textarea class="header__forms_form_input header__forms_form_textarea" name="" id="careertext" placeholder=""></textarea>
                   <span class="header__forms_form_bar"></span>
                   <span class="header__forms_form_border"></span>
                   <small>Error message</small>
