--- a/career.html
+++ b/career.html
@@ -750,7 +750,7 @@
                   <input type="submit" name="submit" value="Отправить" class="button__text">
                   <span class="button__hover"></span>
                 </div>
-                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="privacy.html" class="text"><span>политики конфиденциальности</span></a>.</p>
+                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="policy.html" class="text text__middle"><span>политики конфиденциальности</span></a>.</p>
               </div>
             </form>
           </div>
@@ -763,7 +763,7 @@
       <div class="container career_popup__container">
         <div class="career_popup__blocks">
           <div class="career_popup__block">
-            <form id="career" class="header__forms_form">
+            <form id="career" class="career_popup__forms_form">
               <div class="header__forms_form_controls">
                 <div class="header__forms_form_control">
                   <input class="header__forms_form_input" type="text" minlength="4" maxlength="40" placeholder="Как к вам обращаться?" id="careerusername" />
@@ -777,39 +777,6 @@
                   <span class="header__forms_form_border"></span>
                   <small>Error message</small>
                 </div>
-                <div class="header__select_box">
-                  <div class="header__select" data-select>
-                    <div class="header__select_selected_item" data-select-action data-select-open>
-                      <div class="header__select_selected-title" data-select-title>Способ связи</div>
-                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
-                      </svg>
-                    </div>
-                    <div class="header__select_list" data-select-list>
-                      <div class="header__select_list_item" data-select-action data-select-item>Позвонить</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>Написать на почту</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>Написать в телеграм</div>
-                    </div>
-                    <input class="header__select_input" type="text" data-select-input>
-                  </div>
-                </div>
-                <div class="header__select_box">
-                  <div class="header__select" data-select>
-                    <div class="header__select_selected_item" data-select-action data-select-open>
-                      <div class="header__select_selected-title" data-select-title>Бюджет проекта</div>
-                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
-                      </svg>
-                    </div>
-                    <div class="header__select_list" data-select-list>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 50 до 150</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 150 до 500</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 500 до 1 млн</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 1 млн</div>
-                    </div>
-                    <input class="header__select_input" type="text" data-select-input>
-                  </div>
-                </div>
                 <div class="header__forms_form_control">
                   <label for="text" class="header__form_name">Опишите проект</label>
                   <textarea class="header__forms_form_input header__forms_form_textarea" name="" id="careertext" placeholder=""></textarea>
@@ -818,12 +785,12 @@
                   <small>Error message</small>
                 </div>
               </div>
-              <div class="header__form_bottom">
+              <div class="career_popup__form_bottom">
                 <div class="btn btn__input header__form_button">
                   <input type="submit" name="submit" value="Отправить" class="button__text">
                   <span class="button__hover"></span>
                 </div>
-                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="privacy.html" class="text"><span>политики конфиденциальности</span></a>.</p>
+                <p class="career_popup__form_policy">Я даю свое согласие на <a href="policy.html" class="text text__middle"><span>обработку персональных данных</span></a>.</p>
               </div>
             </form>
           </div>
