--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                   <input type="submit" name="submit" value="Отправить" class="button__text">
                   <span class="button__hover"></span>
                 </div>
-                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="policy.html" class="text text__middle"><span>политики конфиденциальности</span></a>.</p>
+                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="policy.html" class="textёёёё"><span>политики конфиденциальности</span></a>.</p>
               </div>
             </form>
           </div>
